--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,21 +1,25 @@
+<!-- for some reason there is a 8px margin -->
 <nav>
-  <label class="logo">ClickTik</label>
-  <ul>
-    <li>
-      <a href="#">Home</a>
-    </li>
-    <!-- align to the right -->
-    <li>
-      <a href="#">Login</a>
-    </li>
-    <li>
-      <a href="#">Search</a>
-    </li>
-    <li>
-      <a href="#">Cart</a>
-    </li>
-    <li>
-      <a href="#">Account</a>
-    </li>
-  </ul>
+  <span class="logo"></span>
+  <label class="brand">ClickTik</label>
+  <div>
+    <ul>
+      <li class="navItem-Left">
+        <a href="#">Home</a>
+      </li>
+      <!-- align to the right -->
+      <li class="navItem-Right">
+        <a href="#">Login</a>
+      </li>
+      <!-- <li class="navItemRight">
+          <a href="#">Search</a>
+        </li>
+        <li class="navItemRight">
+          <a href="#">Cart</a>
+        </li>
+        <li class="navItemRight">
+          <a href="#">Account</a>
+        </li> -->
+    </ul>
+  </div>
 </nav>
