--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,25 +1,9 @@
 <!-- for some reason there is a 8px margin -->
-<nav>
-  <span class="logo"></span>
-  <label class="brand">ClickTik</label>
-  <div>
-    <ul>
-      <li class="navItem-Left">
-        <a href="#">Home</a>
-      </li>
-      <!-- align to the right -->
-      <li class="navItem-Right">
-        <a href="#">Login</a>
-      </li>
-      <!-- <li class="navItemRight">
-          <a href="#">Search</a>
-        </li>
-        <li class="navItemRight">
-          <a href="#">Cart</a>
-        </li>
-        <li class="navItemRight">
-          <a href="#">Account</a>
-        </li> -->
-    </ul>
+<nav class="flex-container">
+  <div class="flex-container">
+    <img src="../../../../assets/logo.png" alt="logo" class="logo" />
+    <label class="brand">ClickTik</label>
+    <a href="#">Home</a>
   </div>
+  <div style="margin-right: 130px"><a href="#">Login</a></div>
 </nav>
