--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: "Inter";
+  src: url(./assets/fonts/Inter/Inter-Regular.ttf);
+}
 body {
   margin: 0px;
+  font-family: "Inter", sans-serif;
+  font-weight: 500;
 }
