finished login component

--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -1,1 +1,22 @@
-<p>login works!</p>
+<div class="container">
+  <div>
+    <img class="logo" src="../../../assets/logo.png" alt="logo" />
+  </div>
+  <div>
+    <p class="header1">Log in to your account</p>
+    <p class="header2">Welcome back! Please enter your details.</p>
+  </div>
+  <form>
+    <div>
+      <label style="text-align: left">Email</label>
+    </div>
+    <input type="email" placeholder="Enter your email" />
+    <div>
+      <label>Password</label>
+    </div>
+    <input type="password" placeholder="••••••••" />
+    <div>
+      <input class="btn-primary" type="submit" value="Sign in" />
+    </div>
+  </form>
+</div>
