--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,9 @@
-<p>footer works!</p>
+<div class="footer-container">
+  <div class="flex-container">
+    <img class="logo" src="../../../../assets/logo.png" alt="logo" />
+    <label>ClickTik</label>
+  </div>
+  <div>
+    <p class="copyright">© 2022 ClickTik</p>
+  </div>
+</div>
