product page design

--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -16,7 +16,12 @@
     </div>
     <input type="password" placeholder="••••••••" />
     <div>
-      <input class="btn-primary" type="submit" value="Sign in" />
+      <input
+        class="btn-primary"
+        type="submit"
+        routerLink="/products"
+        value="Sign in"
+      />
     </div>
   </form>
 </div>
