--- a/src/app/shared/components/footer/footer.component.css
+++ b/src/app/shared/components/footer/footer.component.css
@@ -4,7 +4,7 @@
   align-items: center;
   background-color: #1d2939;
   position: fixed;
-  bottom: 0;
+  bottom: 0px;
   width: 100%;
   height: 128px;
 }
