--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,3 +1,4 @@
+<div class="push"></div>
 <div class="footer-container">
   <div class="flex-container">
     <img class="logo" src="../../../../assets/logo.png" alt="logo" />
