--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -7,7 +7,7 @@ nav {
   background: white;
   width: 100%;
   border-bottom-style: solid;
-  border-color: #424242;
+  border-color: #d0d5dd;
   border-width: 1px;
   padding-top: 28px;
   padding-bottom: 28px;
