--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="flex-container">
     <img src="../../../../assets/logo.png" alt="logo" class="logo" />
     <label class="brand">ClickTik</label>
-    <a href="#">Home</a>
+    <a routerLink="/">Home</a>
   </div>
-  <div style="margin-right: 130px"><a href="#">Login</a></div>
+  <div style="margin-right: 130px"><a routerLink="/login">Login</a></div>
 </nav>
