--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,13 @@
   font-family: "Inter";
   src: url(./assets/fonts/Inter/Inter-Regular.ttf);
 }
+
+html,
 body {
-  margin: 0px;
+  box-sizing: border-box;
+  height: 100%;
+  padding: 0;
+  margin: 0;
   font-family: "Inter", sans-serif;
   font-weight: 500;
 }
