added discounted price to product cards

--- a/src/app/modules/products/products.component.html
+++ b/src/app/modules/products/products.component.html
@@ -64,6 +64,12 @@
               <p class="cardTitle">{{ product.name }}</p>
               <p class="cardDescription">{{ product.description }}</p>
               <div style="margin-bottom: 21px">
+                <span class="cardText1"
+                  ><s>{{ product.price }}</s></span
+                >
+                <span style="margin-right: 14px" class="cardText2"
+                  ><s> USD</s>
+                </span>
                 <span class="cardText1">{{ product.price }}</span>
                 <span class="cardText2"> USD</span>
               </div>
