--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="wrapper">
+<div class="main-content">
   <app-header></app-header>
   <router-outlet></router-outlet>
-  <!-- <app-footer></app-footer> -->
 </div>
+<app-footer></app-footer>
