--- a/src/app/modules/products/products.component.css
+++ b/src/app/modules/products/products.component.css
@@ -3,16 +3,31 @@
   width: 27.5%;
 }
 
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
+.productColumn {
+  float: left;
+  width: 72.5%;
 }
 
 .thumbnail {
   border-radius: 8px;
   width: 282px;
   height: 258px;
+}
+
+.discount {
+  position: absolute;
+  top: 12px;
+  left: 12px;
+  width: 55px;
+  height: 15px;
+  text-align: center;
+  padding: 4px 8px;
+  background-color: #41cccc;
+  border: 0px solid transparent;
+  border-radius: 4px;
+  font-weight: 700;
+  font-size: 12px;
+  color: #344054;
 }
 
 .card {
@@ -22,6 +37,8 @@
   border-radius: 8px;
   margin-left: 27px;
   padding-bottom: 16px;
+  margin-bottom: 24px;
+  position: relative;
 }
 
 .cardTitle {
@@ -147,4 +164,15 @@ label {
 
 .cardDetails {
   margin-bottom: 8px;
+}
+
+.column {
+  float: left;
+  width: auto;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
