implemented api calls for products and categories

--- a/src/app/modules/products/products.component.css
+++ b/src/app/modules/products/products.component.css
@@ -176,3 +176,34 @@ label {
   display: table;
   clear: both;
 }
+
+.pagination {
+  display: flex;
+  justify-content: center;
+}
+
+/* Pagination links */
+.pagination a {
+  color: #1e1e1e;
+  font-size: 15px;
+  font-weight: 500;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color 0.3s;
+  background-color: transparent;
+  margin: 0px 6px;
+  border: 1px solid #f6f6f6;
+  border-radius: 8px;
+}
+
+/* Style the active/current link */
+.pagination a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+/* Add a grey background color on mouse-over */
+.pagination a:hover:not(.active) {
+  background-color: #41cccc;
+}
