--- a/src/app/modules/products/products.component.html
+++ b/src/app/modules/products/products.component.html
@@ -66,3 +66,13 @@
     </div>
   </div>
 </div>
+<!-- <div class="pagination">
+  <a><</a>
+  <a>1</a>
+  <a>2</a>
+  <a>3</a>
+  <a>4</a>
+  <a>5</a>
+  <a>6</a>
+  <a>></a>
+</div> -->
