implemented global state management for agsm

--- a/src/app/modules/products/products.component.css
+++ b/src/app/modules/products/products.component.css
@@ -87,8 +87,13 @@
   border-color: transparent;
 }
 
+.cardDescription {
+  width: 239px;
+  height: 34px;
+}
+
 .cardContainer {
-  padding-left: 16px;
+  padding: 16px 16px;
 }
 
 .ratingReviewContainer {
