added cart icon

--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -41,6 +41,12 @@ nav div a {
   margin-right: 130px;
 }
 
+.headerLinks img {
+  width: 24px;
+  height: 24px;
+  display: flex;
+}
+
 .headerItem {
   margin-left: 20px;
 }
