--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -5,23 +5,31 @@
     <a routerLink="/">Home</a>
   </div>
   <div class="headerLinks">
-    <form
-      #searchForm="ngForm"
-      (ngSubmit)="onSubmit(searchForm)"
-      class="headerItem"
-    >
-      <input
+    <div class="flex-container">
+      <form
+        #searchForm="ngForm"
+        (ngSubmit)="onSubmit(searchForm)"
+        class="headerItem"
+      >
+        <input
+          *ngIf="isAuthenticated"
+          type="text"
+          placeholder="Search"
+          name="search"
+          ngModel
+          required
+        />
+      </form>
+      <img
         *ngIf="isAuthenticated"
-        type="text"
-        placeholder="Search"
-        name="search"
-        ngModel
-        required
+        class="headerItem"
+        src="../../../../assets/Cart.png"
       />
-    </form>
-    <a *ngIf="isAuthenticated" class="headerItem">Cart</a>
-    <a *ngIf="isAuthenticated" class="headerItem">Account</a>
+      <a *ngIf="isAuthenticated" class="headerItem">Account</a>
 
-    <a *ngIf="!isAuthenticated" class="headerItem" routerLink="/login">Login</a>
+      <a *ngIf="!isAuthenticated" class="headerItem" routerLink="/login"
+        >Login</a
+      >
+    </div>
   </div>
 </nav>
