added cart item counter, add to cart not working

--- a/src/app/modules/products/products.component.html
+++ b/src/app/modules/products/products.component.html
@@ -71,7 +71,7 @@
               <span class="cardRating">{{ product.rating }}</span>
               <span class="cardReview"> (11)</span>
             </div>
-            <button class="cardBtn">ADD TO CART</button>
+            <button class="cardBtn" (click)="addToCart()">ADD TO CART</button>
           </div>
         </div>
       </div>
