--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -65,3 +65,24 @@ nav div a {
 form {
   display: inline;
 }
+
+.cart-items {
+  position: absolute;
+  padding-top: 1px;
+  bottom: 14px;
+  left: 34px;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  background-color: #41cccc;
+  border: 3px solid #ffffff;
+  border-radius: 8px;
+  font-weight: 500;
+  font-size: 10px;
+  color: #344054;
+  box-sizing: border-box;
+}
+
+.relative-container {
+  position: relative;
+}
