--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -20,12 +20,8 @@
           required
         />
       </form>
-      <div class="relative-container">
-        <img
-          *ngIf="isAuthenticated"
-          class="headerItem"
-          src="../../../../assets/Cart.png"
-        />
+      <div *ngIf="isAuthenticated" class="relative-container">
+        <img class="headerItem" src="../../../../assets/Cart.png" />
         <div class="cart-items">{{ cartItems }}</div>
       </div>
       <a *ngIf="isAuthenticated" class="headerItem">Account</a>
