increment cart items (still unfixed)

--- a/src/app/modules/products/products.component.html
+++ b/src/app/modules/products/products.component.html
@@ -71,7 +71,9 @@
               <span class="cardRating">{{ product.rating }}</span>
               <span class="cardReview"> (11)</span>
             </div>
-            <button class="cardBtn" (click)="addToCart()">ADD TO CART</button>
+            <button class="cardBtn" (click)="addToCart(product.id)">
+              ADD TO CART
+            </button>
           </div>
         </div>
       </div>
